[package]
name = "csv"
version = "1.0.7"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Fast CSV parsing with support for serde."
documentation = "http://burntsushi.net/rustdoc/csv/"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = ["csv", "comma", "parser", "delimited", "serde"]
license = "Unlicense/MIT"
categories = ["encoding", "parser-implementations"]
exclude = ["/.travis.yml", "/appveyor.yml", "/ci/*", "/scripts/*"]

[badges]
travis-ci = { repository = "BurntSushi/rust-csv" }
appveyor = { repository = "BurntSushi/rust-csv" }

[workspace]
members = ["csv-core", "csv-index"]

[lib]
bench = false

[dependencies]
csv-core = { path = "csv-core", version = "0.1.4" }
itoa = "0.4.3"
ryu = "0.2.7"
serde = "1.0.55"

[dev-dependencies]
serde_derive = "1.0.55"
serde_bytes = "0.10.4"

[profile.release]
debug = true

[profile.bench]
debug = true
