[package]
name = "csv"
version = "1.1.6"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Fast CSV parsing with support for serde."
documentation = "http://burntsushi.net/rustdoc/csv/"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = ["csv", "comma", "parser", "delimited", "serde"]
license = "Unlicense/MIT"
categories = ["encoding", "parser-implementations"]
exclude = ["/.travis.yml", "/appveyor.yml", "/ci/*", "/scripts/*"]
edition = "2018"

[badges]
travis-ci = { repository = "BurntSushi/rust-csv" }
appveyor = { repository = "BurntSushi/rust-csv" }

[workspace]
members = ["csv-core", "csv-index"]

[lib]
bench = false

[dependencies]
bstr = { version = "0.2.1", features = ["serde1"] }
csv-core = { path = "csv-core", version = "0.1.6" }
itoa = "0.4.3"
ryu = "1"
serde = "1.0.55"

[dev-dependencies]
serde = { version = "1.0.55", features = ["derive"] }

[profile.release]
debug = true

[profile.bench]
debug = true
