[package]
name = "csv"
version = "1.3.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Fast CSV parsing with support for serde."
documentation = "https://docs.rs/csv"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = ["csv", "comma", "parser", "delimited", "serde"]
license = "Unlicense/MIT"
categories = ["encoding", "parser-implementations"]
exclude = ["/.github", "/ci/*", "/scripts/*"]
edition = "2021"
rust-version = "1.61"

[workspace]
members = ["csv-core", "csv-index"]

[lib]
bench = false

[dependencies]
csv-core = { path = "csv-core", version = "0.1.11" }
itoa = "1"
ryu = "1"
serde = "1.0.55"

[dev-dependencies]
bstr = { version = "1.2.0", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.55", features = ["derive"] }

[profile.release]
debug = true

[profile.bench]
debug = true
