[package]
name = "csv-core"
version = "0.1.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Bare bones CSV parsing with no_std support."
documentation = "https://docs.rs/csv-core"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = ["csv", "comma", "parser", "delimited", "no_std"]
license = "Unlicense/MIT"
categories = ["encoding", "no-std", "parser-implementations"]

[badges]
travis-ci = { repository = "BurntSushi/rust-csv" }
appveyor = { repository = "BurntSushi/rust-csv" }

[lib]
bench = false

[dependencies]
memchr = { version = "1", default-features = false }

[dev-dependencies]
arrayvec = { version = "0.3", default-features = false }

[profile.release]
debug = true

[profile.bench]
debug = true
