[package]
name = "csv-core"
version = "0.1.11"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Bare bones CSV parsing with no_std support."
documentation = "https://docs.rs/csv-core"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = ["csv", "comma", "parser", "delimited", "no_std"]
license = "Unlicense/MIT"
categories = ["encoding", "no-std", "parser-implementations"]
workspace = ".."
edition = "2018"

[badges]
travis-ci = { repository = "BurntSushi/rust-csv" }
appveyor = { repository = "BurntSushi/rust-csv" }

[lib]
bench = false

[features]
default = []
libc = ["memchr/libc"]

[dependencies]
memchr = { version = "2", default-features = false }

[dev-dependencies]
arrayvec = { version = "0.5", default-features = false }
