[package]
name = "csv-index"
version = "0.1.6"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "On disk CSV indexing data structures."
documentation = "https://docs.rs/csv-index"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = ["csv", "comma", "parser", "delimited", "index"]
license = "Unlicense/MIT"
categories = ["encoding", "parser-implementations"]
workspace = ".."
edition = "2018"

[badges]
travis-ci = { repository = "BurntSushi/rust-csv" }
appveyor = { repository = "BurntSushi/rust-csv" }

[lib]
bench = false

[dependencies]
byteorder = "1"
csv = { path = "..", version = "1.1.0" }
